fix npc name display wrapping

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -209,14 +209,17 @@ $gray: #888
     flex: 1
     display: flex
     flex-direction: row
+    flex-wrap: wrap
     margin: 7px
 
     li
       justify-content: flex-start
       margin: 0
       margin-right: 7px
+      margin-bottom: 3px
 
       a
+        white-space: nowrap
         font-family: "Helvetica"
         font-size: .8rem
         padding: 1px 7px
